<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#343A6B"
        tools:context=".activity.SignupScreen"
        app:layoutDescription="@xml/activity_signup_screen_scene">

        <RelativeLayout
            android:id="@+id/relativeLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.039" />

        <TextView
            android:id="@+id/SignupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/top_background"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.424"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.11" />


        <FrameLayout
            android:id="@+id/frameLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/blue_border_rounded_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignupText">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/UsertextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                    app:layout_constraintTop_toTopOf="@+id/frameLayout3"
                    app:startIconDrawable="@drawable/ic_baseline_person"
                    tools:layout_editor_absoluteX="108dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@id/SignupUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_input_field"
                        android:drawablePadding="10dp"
                        android:hint="@string/enter_username"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EmailtextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
                    app:layout_constraintTop_toTopOf="@+id/frameLayout3"
                    app:startIconDrawable="@drawable/ic_baseline_email"
                    tools:layout_editor_absoluteX="75dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/SignupEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_input_field"
                        android:hint="@string/enter_email"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/PhonetextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                    app:layout_constraintTop_toTopOf="@+id/frameLayout3"
                    app:startIconDrawable="@drawable/ic_baseline_phone"
                    tools:layout_editor_absoluteX="100dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/SignupPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_input_field"
                        android:hint="@string/enter_phone"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/PasswordtextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock"
                    tools:layout_editor_absoluteX="119dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/SignupPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_input_field"
                        android:hint="@string/enter_password"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:autofillHints=""
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:paddingStart="9dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry">

                    <Button
                        android:id="@+id/SignupSubmitbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/theme_button"
                        android:text="@string/submit"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/ViewButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/theme_button"
                        android:text="@string/view_records"
                        tools:ignore="ButtonStyle,RtlHardcoded" />

                </LinearLayout>
            </LinearLayout>


        </FrameLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</ScrollView>
</layout>
